--- a/TickTacToe/app/src/main/res/values/strings.xml
+++ b/TickTacToe/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TickTacToe</string>
+    <string name="menu">Menu</string>
     <string name="vs_friend_online">Versus Friend</string>
     <string name="vs_player">Versus Player</string>
     <string name="vs_computer">Versus Computer</string>
@@ -11,15 +12,15 @@
     <string name="already_having_account">Already have an account? click here to</string>
     <string name="sign_in">Sign In</string>
     <string name="title_activity_forgot_password">ForgotPassword</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="nav_open_drawer">Open navigation drawer</string>
+    <string name="nav_close_drawer">Close navigation drawer</string>
     <string name="reset_password">Reset Password</string>
     <string name="back_to_home">Back To Home</string>
     <string name="an_email_has_been_sent_to_you_containing_the_password_reset_link">An Email has been sent to you containing the password Reset Link.</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="enter_other_player_name">Enter other player name</string>
+    <string name="send_request">Send Request</string>
+    <string name="incoming_request_from">Incoming request From</string>
+    <string name="accept_invitation">Accept Invitation</string>
 </resources>
