--- a/TickTacToe/app/src/main/res/values/strings.xml
+++ b/TickTacToe/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="send_request">Send Request</string>
     <string name="incoming_request_from">Incoming request From</string>
     <string name="accept_invitation">Accept Invitation</string>
+    <string name="button">buttons</string>
 </resources>
